Gets app working

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div id="root"></div>
-    <!-- The bundled JS will be injected here by Vite or your build tool -->
+    <script type="module" src="/src/index.jsx"></script>
 </body>
 
 </html>
